--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,17 +1,27 @@
 ---
+
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+import '../styles/global.css';
+
 const pageTitle = 'About Me';
 
 const identity = {
   firstName: 'Taylor',
   country: 'South Africa',
   occupation: 'Software Developer',
-  hobbies: ['photography', 'birdwatching', 'baseball'],
+  hobbies: ['running', 'gym', 'baseball'],
   };
 
 const skills = ['HTML', 'CSS', 'JavaScript', 'React', 'Astro', 'Writing Docs'];
 const happy = true;
 const finished = false;
 const goal = 3;
+
+const skillColor = 'navy';
+const fontWeight = 'bold';
+const textCase = 'uppercase';
+
 ---
 
 <html lang="en">
@@ -21,11 +31,22 @@ const goal = 3;
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <title>{pageTitle}</title>
+        <style define:vars={{skillColor, fontWeight, textCase}}>
+            h1 {
+                color: purple;
+                font-size: 4rem;
+            }
+
+            .skill {
+                color: var(--skillColor);
+                font-weight: var(--fontWeight);
+                text-transform: var(--textCase);
+            }
+        </style>
     </head>
     <body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+
+        <Header />
 
         <h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
@@ -42,7 +63,7 @@ const goal = 3;
         </ul>
         <p>My skills are:</p>
         <ul>
-            {skills.map((skill) => <li>{skill}</li>)}
+            {skills.map((skill) => <li class="skill">{skill}</li>)}
         </ul>
 
         {happy && <p>I am happy to be learning Astro!</p>}
@@ -50,5 +71,7 @@ const goal = 3;
         {finished && <p>I finished this tutorial!</p>}
 
         {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
+
+        <Footer/>
     </body>
 </html>
