--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,8 @@
 ---
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+import '../styles/global.css';
+
 const pageTitle = 'My Blog';
 ---
 
@@ -11,9 +15,7 @@ const pageTitle = 'My Blog';
       <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Header/>
 
     <h1>{pageTitle}</h1>
 
@@ -24,5 +26,7 @@ const pageTitle = 'My Blog';
         <li><a href="/posts/post-2/">Post 2</a></li>
         <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
+
+    <Footer/>
   </body>
 </html>
