--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,8 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
+
 const pageTitle = 'My Astro Site';
 ---
 
@@ -11,10 +15,14 @@ const pageTitle = 'My Astro Site';
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+		<Header/>
 
 		<h1>{pageTitle}</h1>
+
+		<Footer/>
+
+		<script>
+			import '../scripts/menu';
+		</script>
 	</body>
 </html>
