--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -1,5 +1,26 @@
 ---
-const { url, title } = Astro.props;
+const { url, title, description } = Astro.props;
 ---
+<style>
+    a {
+        width: 100%;
+        height: 200px;
+        background-color: white;
+        box-shadow: 10px 10px 10px -3px rgba(0, 0, 0, 0.126);
+        border-radius: 1em;
+        text-decoration: none;
+    }
 
-<li><a href={url}>{title}</a></li>
+    .post {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+</style>
+
+<a href={url}>
+    <div class="post">
+        <h2>{title}</h2>
+        <p>{description}</p>
+    </div>
+</a>
