Bug fix on dynamic tag page

--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -23,6 +23,6 @@ const { posts } = Astro.props;
   <p>Posts tagged with {tag}:</p>
 
   <ul>
-    {(posts as string[]).map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+    {(posts as string[]).map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} description={post.frontmatter.description} />)}
   </ul>
 </BaseLayout>
