--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,8 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
+import Header from '@components/Header.astro';
+import Footer from '@components/Footer.astro';
+import '@styles/global.css';
+import { ViewTransitions } from 'astro:transitions';
 
 const { pageTitle } = Astro.props;
 ---
@@ -19,6 +20,7 @@ const { pageTitle } = Astro.props;
                 font-size: 4rem;
             }
         </style>
+	    <ViewTransitions />
 	</head>
 	<body>
 		<Header/>
@@ -30,7 +32,7 @@ const { pageTitle } = Astro.props;
 		<Footer/>
 
 		<script>
-			import '../scripts/menu';
+			import '@scripts/menu';
 		</script>
 	</body>
 </html>
