--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-import BlogPost from '../components/BlogPost.astro';
+import BlogPost from '@components/BlogPost.astro';
+import BaseLayout from '@layouts/BaseLayout.astro';
 
 const allPosts = await Astro.glob('./posts/*.md');
 const pageTitle = 'My Blog';
