Fix theme toggle

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -31,8 +31,6 @@ const { pageTitle } = Astro.props;
 
 		<Footer/>
 
-		<script>
-			import '@scripts/menu';
-		</script>
+		<script src="@scripts/menu"></script>
 	</body>
 </html>
