--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,7 @@
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
 import '@styles/global.css';
-import { ViewTransitions } from 'astro:transitions';
+// import { ViewTransitions } from 'astro:transitions';
 
 const { pageTitle } = Astro.props;
 ---
@@ -20,7 +20,7 @@ const { pageTitle } = Astro.props;
                 font-size: 4rem;
             }
         </style>
-	    <ViewTransitions />
+	    <!-- <ViewTransitions /> -->
 	</head>
 	<body>
 		<Header/>
